--- a/src/app/home/home-p/home-p.component.css
+++ b/src/app/home/home-p/home-p.component.css
@@ -4,11 +4,13 @@ table {
     margin: 20px 0;
     font-size: 18px;
     text-align: left;
+    background-color: #1a1a1a;
   }
   
   th, td {
-    border: 1px solid #1a1a1a;
+    border: 1px solid #969595;
     padding: 8px;
+    color: aliceblue;
   }
   
   th {
